refactor repo to allow multiple bugs
We have found another bug in mysql/ef core and would like to document it. This updates the existing code/docs to clarify the currently documented bug and allows for future extension in case of more bugs.

--- a/MySqlEfCoreBugs.csproj
+++ b/MySqlEfCoreBugs.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <!--App Deps -->
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
